RESOLVED FIXED291189
Do not immediately recreate invalidated VideoToolbox session when the application has been backgrounded
https://bugs.webkit.org/show_bug.cgi?id=291189
Summary Do not immediately recreate invalidated VideoToolbox session when the applica...
Jean-Yves Avenard [:jya]
Reported 2025-04-07 02:19:25 PDT
Follow-up on bug 290900 When the VT session is invalidated because the GPUP has been backgrounded, we shouldn't immediately re-create the VT session. Instead we should wait for the application to go back into the foreground.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-07 02:19:46 PDT
Jean-Yves Avenard [:jya]
Comment 2 2025-04-07 02:24:19 PDT
EWS
Comment 3 2025-04-08 01:10:28 PDT
Committed 293403@main (28e62ba18030): <https://commits.webkit.org/293403@main> Reviewed commits have been landed. Closing PR #43737 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.