Do not immediately recreate invalidated VideoToolbox session when the application has been backgrounded https://bugs.webkit.org/show_bug.cgi?id=291189 rdar://148732453

Reviewed by Jer Noble.

If the WebCoreDecompressionSession got invalidated, only flush the SourceBuffer
and re-create a new WebCoreDecompressionSession once the UIP goes back
into the foreground.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml: Re-enable pref now that the root cause for disabling it has been resolved.
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::applicationWillResignActive):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::applicationDidBecomeActive):
* Source/WebCore/platform/graphics/avfoundation/objc/MediaSourcePrivateAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaSourcePrivateAVFObjC.mm:
(WebCore::MediaSourcePrivateAVFObjC::applicationWillResignActive):
(WebCore::MediaSourcePrivateAVFObjC::applicationDidBecomeActive):
* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::setLayerRequiresFlush):
(WebCore::SourceBufferPrivateAVFObjC::applicationWillResignActive):
(WebCore::SourceBufferPrivateAVFObjC::applicationDidBecomeActive):
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.h:
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::setLayerRequiresFlush):
(WebCore::MediaPlayerPrivateWebM::applicationWillResignActive):
(WebCore::MediaPlayerPrivateWebM::applicationDidBecomeActive):

Canonical link: https://commits.webkit.org/293403@main